# BeautifulHandwrittenWords

./: .gitmodules  BINARY_SETTINGS_FEATURE.md  CMakeLists.txt  CMakeLists_test.txt  CMakeLists_vcpkg.txt  README.md  imgui.ini  install_dependencies.ps1  main.cpp  main_backup.cpp  main_fixed.cpp  setup.bat  test_basic.cpp  test_images.ps1
__DO__NOT__TOUCH__/: demo.cpp
